<resources>
    <string name="app_name">NASDUBAI_KOTLIN</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>


    <!--API ERRORS-->
    <string name="status_106">not a valid email</string>
    <string name="status_107">not a valid number</string>
    <string name="status_108">password and confirm password not same</string>
    <string name="status_109">Old passord doesn\'t match!</string>
    <string name="status_111">No students Available</string>
    <string name="status_115">Invalid file type</string>
    <string name="status_117">not a valid date</string>
    <string name="status_126">File size too large( maxsize:2Mb )</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="null_value"></string>

    <!--***************** REGISTERED ITEMS AND ICONS******************-->

    <string-array name="navigation_item_reg">
        <!-- 0 -->
        <item>Home</item>
        <!-- 1 -->
        <item>Calendar</item>
        <!-- 2 -->
        <item>Notifications</item>
        <!-- 3 -->
        <item>Communications</item>
        <!-- 4 -->
        <item>Absences</item>
        <!-- 5 -->
        <item>Payments</item>
        <!-- 6 -->
        <item>Lunch Box</item>
        <!-- 7 -->
        <item>Parent Essentials</item>
        <!-- 8 -->
        <item>Early Years</item>
        <!-- 9 -->
        <item>Primary</item>
        <!-- 10 -->
        <item>Secondary</item>
        <!-- 11 -->
        <item>IB Programme</item>
        <!-- 12 -->
        <item>University Guidance</item>
        <!-- 13 -->
        <item>Sports</item>
        <!-- 14 -->
        <item>Performing Arts</item>
        <!-- 15 -->
        <item>CCAs</item>
        <!-- 16 -->
        <item>Parents\' Association</item>
        <!-- 17 -->
        <item>Parent Meetings</item>
        <!-- 18 -->
        <item>NAE Programmes</item>
        <!-- 19 -->
        <item>Reports</item>
        <!-- 20 -->
        <item>Permission Forms</item>
        <!-- 21 -->
        <item>Gallery</item>
        <!-- 22 -->
        <item>About Us</item>
        <!-- 23 -->
        <item>Contact Us</item>
    </string-array>

    <string-array name="navigation_item_reg_icons">
        <!-- 0 -->
        <item>@drawable/home</item>
        <!-- 1 -->
        <item>@drawable/calendar</item>
        <!-- 2 -->
        <item>@drawable/notif</item>
        <!-- 3 -->
        <item>@drawable/communication</item>
        <!-- 4 -->
        <item>@drawable/absence</item>
        <!-- 4 -->
        <item>@drawable/payment</item>
        <!-- 5 -->
        <item>@drawable/lunchbox_sideicon</item>
        <!-- 6 -->
        <item>@drawable/parent</item>
        <!-- 7 -->
        <item>@drawable/earlyyears</item>
        <!-- 8 -->
        <item>@drawable/primary</item>
        <!-- 9 -->
        <item>@drawable/secondary</item>
        <!-- 10 -->
        <item>@drawable/ib</item>
        <!-- 11 -->
        <item>@drawable/university_guidelines</item>
        <!-- 12 -->
        <item>@drawable/sports</item>
        <!-- 13 -->
        <item>@drawable/arts</item>
        <!-- 14 -->
        <item>@drawable/ccas</item>
        <!-- 15 -->
        <item>@drawable/parent_association</item>
        <!-- 16 -->
        <item>@drawable/parentevening</item>
        <!-- 17 -->
        <item>@drawable/naeprogramme</item>
        <!-- 18 -->
        <item>@drawable/report_side</item>
        <!-- 19 -->
        <item>@drawable/permission_slip</item>
        <!-- 20 -->
        <item>@drawable/gallery</item>
        <!-- 21 -->
        <item>@drawable/aboutus</item>
        <!-- 22 -->
        <item>@drawable/contacts</item>
    </string-array>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="early_years">Early Years</string>
    <string name="enter_your_subject_here">Enter your subject here...</string>
    <string name="enter_content">Enter content:</string>
    <string name="contact_form">Contact Form</string>
    <string name="loading">Loading&#8230;</string>
    <string name="introduction">Introduction:</string>
    <string name="regNewAbsence">Register New Absence</string>
    <string name="appregisteredHint">App Registered Absences</string>
    <string name="requestHint">If you need to cancel a registered absence please contact Reception +971 (0)42199999</string>
    <string name="http_www_nordangliaeducation_com_our_schools_dubai_our_school_our_uniform">http://www.nordangliaeducation.com/our-schools/dubai/our-school/our-uniform</string>
    <string name="search"> Search...</string>
    <string name="Accreditions"><![CDATA[Accreditions & Examinations]]></string>
</resources>