<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:orientation="vertical"
    >
    <RelativeLayout
        android:id="@+id/sendEmailDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:id="@+id/r"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent">

            <ImageView
                android:id="@+id/a"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/dialoguetopcurve"
                android:gravity="center"
                android:scaleType="fitCenter" />

            <ImageView
                android:id="@+id/b"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:scaleType="fitCenter" />

            <ImageView
                android:id="@+id/iconImageView"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_centerInParent="true"
                android:background="@drawable/roundemail"
                android:gravity="center"
                android:scaleType="fitCenter" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/r"
            android:orientation="vertical"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:background="@drawable/dialoguebottomcurve">


            <com.mobatia.naisapp.customviews.textview.CustomFontTextViewSemiBoldBlack
                android:id="@+id/alertHead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/contact_form"
                android:textColor="@color/rel_two"
                android:textSize="18sp" />


            <com.mobatia.naisapp.customviews.edittext.CustomFontEditTextRegularNoColor
                android:id="@+id/text_dialog"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:layout_gravity="left|center_vertical"
                android:hint="@string/enter_your_subject_here"
                android:textColorHint="@color/black"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:background="@drawable/edittext_greybg"
                android:imeOptions="actionNext"
                android:singleLine="true"
                tools:ignore="RtlHardcoded" />

            <com.mobatia.naisapp.customviews.textview.CustomFontTextViewRegularBlack
                android:id="@+id/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:gravity="left"
                android:text="@string/enter_content"
                android:textColor="#ff000000"
                android:textSize="18sp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="10dp" />
            <com.mobatia.naisapp.customviews.edittext.CustomFontEditTextRegularNoColor

                android:id="@+id/text_content"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:paddingLeft="5dp"
                android:paddingTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:layout_gravity="left"
                android:textColor="@color/black"
                android:background="@drawable/edittext_greybg"
                android:imeOptions="actionDone"
                android:paddingStart="5dp"
                tools:ignore="RtlSymmetry" />
            <Button
                android:id="@+id/submitButton"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/submit"
                android:textAllCaps="false"
                android:background="@drawable/button"
                android:textColor="@color/white"/>
            <Button
                android:id="@+id/cancelButton"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:background="@drawable/buttonred_new"
                android:textColor="@color/white"/>

        </LinearLayout>
    </RelativeLayout>
</ScrollView>