<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/relMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center">
        <include
            android:id="@+id/progressDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            layout="@layout/custom_progress_layout"
            android:visibility="visible" />

    </LinearLayout>
    <include
        android:id="@+id/includeRel"
        layout="@layout/header_bar_fragment"
        />
    <RelativeLayout
        android:id="@+id/belowViewRelative"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/includeRel"
        android:visibility="visible"

        >
        <com.mobatia.naisapp.customviews.textview.CustomFontTextViewRegularBlack
            android:id="@+id/select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left|center"
            android:text="Select your child:"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:textSize="16sp" />
        <LinearLayout
            android:id="@+id/studentSpinner"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/select"
            android:background="@drawable/event_spinnerbg"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="100">

            <com.github.siyamed.shapeimageview.CircularImageView
                android:id="@+id/imagicon"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_margin="5dp"
                android:gravity="center"
                android:padding="5dp"
                android:scaleType="fitCenter"
                android:src="@drawable/boy"
                app:siBorderColor="#A0DAE5"
                app:siBorderWidth="1dp" />

            <com.mobatia.naisapp.customviews.textview.CustomFontTextViewRegularBlack
                android:id="@+id/studentName"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="80"
                android:gravity="left|center"
                android:paddingLeft="10dp"
                android:text="Select a child"
                android:textSize="16sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="8" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_gravity="right|center"
                android:layout_weight="12"
                android:src="@drawable/arrowdownnew"
                android:visibility="visible" />

        </LinearLayout>

        <com.mobatia.naisapp.customviews.textview.CustomFontTextViewRegularBlack
            android:id="@+id/appregisteredHint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/studentSpinner"
            android:layout_margin="5dp"
            android:gravity="center"
            android:text="@string/appregisteredHint"
            android:textColor="@color/black"
            android:textSize="16dp"
            android:visibility="visible" />

        <View
            android:id="@+id/viewDivider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/appregisteredHint"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/rel_eight">

        </View>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/mAbsenceListView"
            style="@style/ListStyleBlackTextTransparentSelector"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/newRequest"
            android:layout_below="@+id/viewDivider"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" />

        <com.mobatia.naisapp.customviews.textview.CustomFontTextViewSemiBoldBlack
            android:id="@+id/newRequest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/requestHint"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/buttonred_new"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/regNewAbsence"
            android:textColor="@color/white"
            android:textSize="18dp"
            android:visibility="invisible" />

        <com.mobatia.naisapp.customviews.textview.CustomFontTextViewRegularNoColor
            android:id="@+id/requestHint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="left|center_vertical"
            android:text="@string/requestHint"
            android:textColor="@color/rel_eight"
            android:textSize="16dp"
            android:visibility="visible" />

    </RelativeLayout>
</RelativeLayout>